--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>{% block title %}KexTecH{% endblock %}</title>
+    <title>{% block title %}KexTech{% endblock %}</title>
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 {% if cart|length > 0 %}
                     Your cart:
                     <a href="{% url 'cart:cart_detail' %}">
-                        {{ total_items }} item{{ total_items|pluralize }}, ${{ cart.get_total_price }}
+                        {{ total_items }} item{{ total_items|pluralize }}, £{{ cart.get_total_price }}
                     </a>
                 {% else %}
                     Your cart is empty.
