--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -11,10 +11,10 @@
         <h3>Your order</h3>
         <ul>
             {% for item in cart %}
-                <li>{{ item.quantity }}x {{ item.product.name }} <span>${{ item.total_price }}</span></li>
+                <li>{{ item.quantity }}x {{ item.product.name }} <span>£{{ item.total_price }}</span></li>
             {% endfor %}
         </ul>
-        <p>Total: ${{ cart.get_total_price }}</p>
+        <p>Total: £{{ cart.get_total_price }}</p>
     </div>
 
     <form action="." method="post" class="order-form">
