prior to bootstrap

--- a/home/templates/home/investors.html
+++ b/home/templates/home/investors.html
@@ -1,6 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
+{% block title %}KexTech Investors{% endblock %}
 
 {% block content %}
 <p>This will be the investor relations</p>
