--- a/shop/templates/shop/Products/detail.html
+++ b/shop/templates/shop/Products/detail.html
@@ -16,6 +16,6 @@
             {% csrf_token %}
             <input type="submit" value="Add to cart">
         </form>
-        {{ product.description|linebreaks }}
+        <div>{{ product.description|linebreaks }}</div>
     </div>
 {% endblock %}
