--- a/shop/templates/shop/Products/list.html
+++ b/shop/templates/shop/Products/list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    {% if category %}{{ category.name }}{% else %}Products{% endif %}
+    {% if category %}{{ category.name }}{% else %}KexTech Products{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
         </ul>
     </div>
     <div id="main" class="product-list">
-        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+        <h1>{% if category %}{{ category.name }}{% else %}Events{% endif %}</h1>
         {% for product in products %}
             <div class="item">
                 <a href="{{ product.get_absolute_url }}">
