--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,12 +1,23 @@
-{% extends "shop/base.html" %}
+{% extends "shop/inline_base.html" %}
 
-{% block title %}KexTech Blog{% endblock %}
 
-{% block content %}
-    <h1>Welcome to the KEXTECH Blog</h1>
-    {% for post in posts%}
-    <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-    <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
-    {{ post.body|truncatewords:30|linebreaks}}
-    {% endfor %}
-{% endblock%}
+
+<div class="container">
+    {% block title %}KexTech Blog{% endblock %}
+
+    {% block content %}
+        <h1>Welcome to the KEXTECH Blog</h1>
+        {% for post in posts%}
+        <div class="media">
+            <div class="media-body">
+                <!--<img class="d-flex mr-3" src="..." alt="Generic placeholder image">-->
+                <h2 class="mt-0"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+                <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
+                {{ post.body|truncatewords:30|linebreaks}}
+            </div>
+        </div>
+        {% endfor %}
+    {% endblock%}
+</div>
+
+
