--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,25 +1,10 @@
-{% extends "shop/base.html" %}
+{% extends "shop/inline_base.html" %}
 {% load static %}
 
 {% block title %}
     KexTech About Us
 {% endblock %}
 
-
 {% block content %}
-
-<h1>Company Profile</h1>
-<p>KEXTECH LTD is an independant, privately owned, UK company.</p>
-
-
-
-<h1>Management Team</h1>
-<p>Alexandra Bio..</p>
-<p>Pavlos Bio..</p>
-<p>Eddie Bio..</p>
-
-<h1>Contact Us</h1>
-kextexh@gmx.com
-
-
+{% include "home/includes/about.html" %}
 {% endblock %}
