--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends "shop/inline_base.html" %}
 
 {% block title %}
     Checkout
@@ -22,4 +22,5 @@
         <p><input type="submit" value="Place order"></p>
         {% csrf_token %}
     </form>
+
 {% endblock %}
