--- a/payment/templates/payment/done.html
+++ b/payment/templates/payment/done.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends "shop/inline_base.html" %}
 
 {% block content %}
     <h1>Your payment was successful</h1>
