--- a/shop/static/css/base.css
+++ b/shop/static/css/base.css
@@ -1,5 +1,91 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
+body {
+    background: white url("../img/background.jpg");
+}
+
+ul.errorlist {
+    padding-left: 0;
+}
+
+ul.errorlist > li {
+    list-style: none;
+}
+
+.navbar {
+    border-radius: 0;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', cursive;
+}
+
+
+h1, h2, h3, h4, h5 , h6 {
+    font-family: 'Ubuntu', sans-serif; font-weight:normal;
+}
+
+#category_sidebar {
+    font-family: 'Ubuntu', sans-serif; font-weight:normal;
+    z-index: 1;
+    position: absolute;
+    width:400px;
+    height:100%;
+    overflow-y:hidden;
+    background:#white;
+    opacity:0.9;
+}
+
+#product_main {
+    width:96%;
+    position: absolute;
+    padding: 15px;
+    border 5px solid green;
+    padding-left: 400px;
+}
+
+.product-list .item {
+    width:250px;
+    padding:10px 20px 10px 0;
+    float:left;
+    text-align:center;
+    line-height:1.2;
+}
+
+.product-list .item img {
+    width:100%;
+    height:100%
+    margin-bottom:8px;
+}
+
+.sidebar-nav{
+    padding:0;
+    list-style: none;
+
+}
+
+.sidebar-nav li{
+    text-indent:20px;
+    line-height:40px;
+
+}
+
+.sidebar-nav li a{
+    display: block;
+    text-decoration: none;
+    color: #black;
+
+}
+
+.sidebar-nav li a:hover{
+    background: #dedfe5;
+}
+
+/* old stuff that was used for development purposes.
+
+
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
+
 body { 
     margin:0;
     padding:0;
@@ -314,4 +400,137 @@ ul.errorlist {
 
 .recommendations.cart img {
     width:120px;
+}
+
+*/
+
+table {
+    width:100%;
+    border-spacing:0;
+    border-collapse: collapse;
+}
+
+table th, table td {
+    text-align:left;
+    font-size:14px;
+    padding:10px;
+    margin:0;
+}
+
+tbody tr:nth-child(odd) {
+    background:#efefef;
+}
+
+tbody tr.subtotal {
+    background:#ccc;
+}
+
+thead th, tbody tr.total {
+    background:#21262d;
+    color:#fff;
+    font-weight:bold;
+}
+
+table.cart {
+    margin-bottom:40px;
+}
+
+table.cart img {
+    width:180px;
+}
+
+tbody td.num {
+    text-align:right;
+}
+
+td input[type="submit"] {
+    font-size:12px;
+    padding:4px 10px;
+}
+
+
+form p label, form p input {
+    float:left;
+    clear:both;
+}
+
+form p label {
+    font-size:14px;
+    padding-bottom:4px;
+}
+
+form p input {
+    width:300px;
+    font-size:13px;
+    font-family: 'Ubuntu', cursive;
+    margin-bottom:10px;
+    padding:10px 12px;
+    border:0;
+    background:#d5dbe5;
+    color:#666;
+    border-radius:4px;
+}
+
+form input:hover{
+    background: #c7f2fc;
+}
+
+.order-form {
+    float:left;
+}
+
+.order-info {
+    float:right;
+    width:300px;
+    background:#d5dbe5;
+    padding:10px 20px;
+    color:#333;
+    border-bottom:4px solid #000000;
+}
+
+.order-info h3 {
+    color:#black;
+}
+
+.order-info ul li {
+    margin:0;
+    padding:0;
+    font-size:14px;
+}
+
+.order-info p {
+    font-weight:bold;
+    float:right;
+}
+
+.order-info span {
+    float:right;
+}
+
+.neg {
+    color:#dc1616;
+}
+
+.languages {
+   float:right;
+   padding-top:4px;
+   font-size:14px;
+}
+
+.languages ul {
+    list-style:none;
+    margin:0;
+    padding:0;
+    float:left;
+}
+
+.languages ul li {
+    float:left;
+    margin:0 0 0 10px;
+    font-size:14px;
+}
+
+.languages p {
+    float:left;
+    margin:0;
 }
