--- a/shop/templates/shop/Products/detail.html
+++ b/shop/templates/shop/Products/detail.html
@@ -1,4 +1,4 @@
-{% extends "shop/base.html" %}
+{% extends "shop/inline_base.html" %}
 {% load static %}
 
 {% block title %}
@@ -7,15 +7,17 @@
 
 {% block content %}
     <div class="product-detail">
+        <h1><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h1>
+        <h2>{{ product.name }}</h2>
         <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
-        <h1>{{ product.name }}</h1>
-        <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
-        <p class="price">£{{ product.price }}</p>
-        <form action="{% url 'cart:cart_add' product.id %}" method="post">
-            {{ cart_product_form }}
-            {% csrf_token %}
-            <input type="submit" value="Add to cart">
-        </form>
+        <div class="order-info">
+            <p class="price">£{{ product.price }}</p>
+            <form action="{% url 'cart:cart_add' product.id %}" method="post">
+                {{ cart_product_form }}
+                {% csrf_token %}
+                <input type="submit" value="Add to cart">
+            </form>
+        </div>
         <div>{{ product.description|linebreaks }}</div>
     </div>
 {% endblock %}
