--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,35 +5,50 @@
 <head>
     <meta charset="utf-8" />
     <title>{% block title %}KexTech{% endblock %}</title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div id="header">
-        <a href="/" class="logo">KEXTECH</a>
-    </div>
-    <div id="subheader">
-        <ul>
-            <li><a href="{% url 'home:home' %}">Home</a></li>
-            <li><a href="{% url 'home:about' %}">About Us</a></li>
-            <li><a href="{% url 'blog:post_list' %}">Blog</a></li>
-            <li><a href="{% url 'shop:product_list' %}">Events</a></li>
-            <li><a href="{% url 'home:investors' %}">Investors</a></li>
-        </ul>
-        <div class="cart">
-            {% with total_items=cart|length %}
-                {% if cart|length > 0 %}
-                    Your cart:
-                    <a href="{% url 'cart:cart_detail' %}">
-                        {{ total_items }} item{{ total_items|pluralize }}, £{{ cart.get_total_price }}
-                    </a>
-                {% else %}
-                    Your cart is empty.
-                {% endif %}
-            {% endwith %}
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsable_items">﻿
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'home:home' %}">KEXTECH</a>
+            </div>
+            <div class="collapse navbar-collapse" id="collapsable_items">
+                <ul class="nav navbar-nav">
+                    <li {% if request.resolver_match.url_name == 'home' %}class="active"{% endif %}><a href="{% url 'home:home' %}">Home</a></li>
+                    <li {% if request.resolver_match.url_name == 'about' %}class="active"{% endif %}><a href="{% url 'home:about' %}">About</a></li>
+                    <li {% if request.resolver_match.url_name == 'post_list' %}class="active"{% endif %}><a href="{% url 'blog:post_list' %}">Blog</a></li>
+                    <li {% if request.resolver_match.url_name == 'product_list' %}class="active"{% endif %}><a href="{% url 'shop:product_list' %}">Events</a></li>
+                    <li {% if request.resolver_match.url_name == 'investors' %}class="active"{% endif %}><a href="{% url 'home:investors' %}">Investors</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                     <li>
+                        {% with total_items=cart|length %}
+                            {% if cart|length > 0 %}
+                                <a href="{% url 'cart:cart_detail' %}">
+                                    Your cart: {{ total_items }} item{{ total_items|pluralize }}, £{{ cart.get_total_price }}
+                                </a>
+                            {% else %}
+                                <a>Your cart is empty.</a>
+                            {% endif %}
+                        {% endwith %}
+                     </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div id="content">
-        {% block content %}
-        {% endblock %}
-    </div>
+    </nav>
+
+    {% block content %}
+    {% endblock %}
+
 </body>
+
