--- a/home/templates/home/includes/investors.html
+++ b/home/templates/home/includes/investors.html
@@ -1,3 +1,3 @@
 {% block content %}
-<p>This will be the investor relations</p>
+<h3>For investor relations please contact kextech.investors@gmx.com</h3>
 {% endblock %}
