--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -4,6 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=1024">
     <title>{% block title %}KexTech{% endblock %}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -28,7 +29,9 @@
                     <li {% if request.resolver_match.url_name == 'about' %}class="active"{% endif %}><a href="{% url 'home:about' %}">About</a></li>
                     <li {% if request.resolver_match.url_name == 'post_list' %}class="active"{% endif %}><a href="{% url 'blog:post_list' %}">Blog</a></li>
                     <li {% if request.resolver_match.url_name == 'product_list' %}class="active"{% endif %}><a href="{% url 'shop:product_list' %}">Events</a></li>
+                    <li {% if request.resolver_match.url_name == 'partnerships' %}class="active"{% endif %}><a href="{% url 'home:partnerships' %}">Partnerships</a></li>
                     <li {% if request.resolver_match.url_name == 'investors' %}class="active"{% endif %}><a href="{% url 'home:investors' %}">Investors</a></li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                      <li>
