--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -6,7 +6,7 @@
 <center><h1>Learn skills targeted to your career.</h1></center>
 
 
-<h2 style="padding:20px"> Autumn Term </h2>
+<h2 style="padding:20px"> Autumn Event Series </h2>
 
 <div class="media" style="padding:50px">
       <a class="media-left media-top" href="#">
@@ -46,7 +46,7 @@
       </div>
 </div>
 
-<h2 style="padding:20px"> Autumn Term </h2>
+<h2 style="padding:20px"> Spring Event Series </h2>
 
 <div class="media" style="padding:50px">
       <a class="media-left media-top" href="#">
@@ -59,8 +59,6 @@
         <a href="{% url 'shop:product_list' %}"><h5>Browse Events</h5></a>
       </div>
 </div>
-
-
 
 
 {% include "home/includes/about.html" %}
