--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -12,6 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
 </head>
 <body>
     <nav class="navbar navbar-inverse">
