added meta tags

--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024">
-    <meta description="">
+    <meta content="KEXTECH - Learn Skills targeted to your career" name="title">
+    <meta content="KEXTECH is focused on bridging the skills gap between rapidly evolving services industries & the current higher education system." name="description">
     <title>{% block title %}KexTech{% endblock %}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
