fix typo on homepage

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -21,7 +21,7 @@
             have written their Athena Platform using python.
         </p>
         <p style="font-family: 'Ubuntu', cursive">
-            If you are complete beginner or an experience programmer this course will provide you with a solid
+            If you are a complete beginner or an experience programmer this course will provide you with a solid
             foundation of the language & a complete overview for coding. This course is specially tailored for
             the students at LSE who are interested in Data Science & improving their technology skills. With the demand
             for programming skills beginning to filter across different disciplines, having python under the belt will
