fix typo on partnerships page

--- a/home/templates/home/partnerships.html
+++ b/home/templates/home/partnerships.html
@@ -29,7 +29,7 @@
         <img class="pull-left" src="{% static 'img/finds_logo.png' %}" width="200" height="200">
       </a>
       <div class="media-body">
-        <a href="https://uclfinds.org"><h2 class="media-heading">UCL Financial Insdustry Series</h2></a>
+        <a href="https://uclfinds.org"><h2 class="media-heading">UCL Financial Industry Series</h2></a>
         <h3>About</h3>
             <p>UCL Financial Industry Series, or more commonly known as UCL FINDS is a student-run forum that organises high-impact conferences,
             debates and talks on financial topics. We were founded in December 2010 with the purpose of providing students, and professionals
