--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,15 +1,10 @@
 {% block content %}
 
 <h1>Company Profile</h1>
-    <p>KEXTECH LTD is an independant, privately owned, UK company, focused on the higher education market.
-    In the ever changing world of today industry is moving too fast for higher education institutions to
-    keep up. We have developed a series of targeted courses in order to introduce & give students the skills and knowledge
-    they need to succeed in modern day job market.</p>
-
-<!--<h1>Management Team</h1>-->
-    <!--<p>Alexandra Bio..</p>-->
-    <!--<p>Pavlos Bio..</p>-->
-    <!--<p>Eddie Bio..</p>-->
+    <p>KEXTECH LTD is an independent, privately owned, UK Company, focused on the higher education market.
+        In the ever-changing world of today industry is moving too fast for higher education institutions
+        to keep up. We have developed a series of targeted courses in order to introduce & give students
+        the skills and knowledge they need to succeed in modern day job market.</p>
 
 <h1>Contact Us</h1>
     <h3>For general enquiries please contact kextech@gmx.com</h3>
