--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<center><h1>Learn skills targeted to your career.</h1></center>
+<center><h1>Skills For Your Career</h1></center>
 
 
 <h2 style="padding:20px"> Autumn Event Series </h2>
@@ -16,16 +16,15 @@
         <h2 class="media-heading">LSE Applicable Maths - Intro to Python For Data Science</h2>
         <p style="font-family: 'Ubuntu', cursive">
             Python is quickly becoming the world’s favourite programming language.
-            Used for a wide array of applications including program scripting,
-            big data, websites & even Raspberry Pi. Google have used it to build Tensor Flow & JP Morgan
-            have written their Athena Platform using python.
+            Used for a wide array of applications including program scripting, big data, websites & even Raspberry Pi.
+            Google have used it to build Tensor Flow & JP Morgan wrote their Athena Platform using python.
         </p>
         <p style="font-family: 'Ubuntu', cursive">
-            If you are a complete beginner or an experience programmer this course will provide you with a solid
+            If you are a complete beginner or an experienced programmer this course will provide you with a solid
             foundation of the language & a complete overview for coding. This course is specially tailored for
-            the students at LSE who are interested in Data Science & improving their technology skills. With the demand
-            for programming skills beginning to filter across different disciplines, having python under the belt will
-            prove an invaluable skill to have in the job market today.
+            the students at LSE who are interested in Data Science & improving their technology skills.
+            With the demand for programming skills beginning to filter across different disciplines,
+            having python under the belt will prove an invaluable skill to have in the job market today.
         </p>
         <a href="{% url 'shop:product_list' %}"><h5>Browse Events</h5></a>
       </div>
@@ -39,14 +38,17 @@
       <div class="media-body">
         <h2 class="media-heading">LSE Applicable Maths - Mergers & Acquisitions</h2>
            <p style="font-family: 'Ubuntu', cursive">
-                Dive into the world of corporate strategy, leveraged buy-outs & raiders & takeovers.
-                This course is an introduction to finance & capital markets with focus on Mergers & Acquisitions.
-                Specially designed to give you the insights you need to get up to speed with Investment Banking so you can nail that interview.
-            </p>
+               Dive into the world of corporate strategy, leveraged buy-outs & raiders & takeovers.
+               This course is an introduction to finance & capital markets with focus on Mergers &
+               Acquisitions. Specially designed to give you the insights you need to get up to speed
+               with Investment Banking so you can nail that interview.
+           </p>
             <p style="font-family: 'Ubuntu', cursive">
-                What do Investment Bankers actually do? This course is here to help, you’ll get an overview of the different roles within the bank,
-                what bankers do day to day. You’ll get an overview of the higher-level strategies as well as specific case studies and see some
-                analytical & modelling techniques. Investment Banking is an exiting and prestigious career option and M&A is at the core of it.
+                What do Investment Bankers actually do? This course is here to help. You’ll get an
+                overview of the different roles within the bank, what bankers do day to day. You’ll
+                get an overview of the higher-level strategies as well as specific case studies and
+                see some analytical & modelling techniques. Investment Banking is an exiting and
+                prestigious career option and M&A is at the core of it.
             </p>
           <a href="{% url 'shop:product_list' %}"><h5>Browse Events</h5></a>
       </div>
@@ -60,16 +62,17 @@
       <div class="media-body">
         <h2 class="media-heading">UCL Financial Industry Series <br>- Finance For Non-Finance Students #Fin4NonFin</h2>
             <p style="font-family: 'Ubuntu', cursive">
-                Risk comes from not knowing what you’re doing. The price is what you pay, value is what you get.
-                Someone’s sitting in the shade today because someone planted a tree a long time ago. Finance
-                transcends bond maths & the stock prices; it’s a life skill. This course aims to solve a growing
-                problem that is rife in the world’s top universities, financial illiteracy.
+                Risk comes from not knowing what you’re doing. The price is what you pay,
+                value is what you get. Someone’s sitting in the shade today because someone
+                planted a tree a long time ago. Finance transcends bond maths & the stock prices;
+                it’s a life skill. This course aims to solve a growing problem that is rife in the
+                world’s top universities, financial illiteracy.
             </p>
             <p style="font-family: 'Ubuntu', cursive">
-                This is a crash course in finance & capital markets; we will touch on everything from the different asset
-                classes & products to corporate strategy merges & acquisitions, crytocurrencies. We will cover general
-                principles in finance as well as specific examples. If you’re thinking of a career in finance this course
-                is the ideal starting point to learn more & find out if its really for you.
+                This is a crash course in finance & capital markets; we will touch on everything from the different
+                asset classes & products to corporate strategy merges & acquisitions, crypto-currencies. We will
+                cover general principles in finance as well as specific examples. If you’re thinking of a career
+                in finance this course is the ideal starting point to learn more & find out if it’s really for you.
             </p>
           <a href="{% url 'shop:product_list' %}"><h5>Browse Events</h5></a>
       </div>
@@ -84,17 +87,20 @@
       <div class="media-body">
         <h2 class="media-heading">LSE Applicable Maths - Python For Machine Learning</h2>
             <p style="font-family: 'Ubuntu', cursive">
-                Machine learning & AI has given us self-driving cars, practical speech recognition, effective web search,
-                and a vastly improved understanding of the human genome. Machine learning is so pervasive today that you
-                probably use it dozens of times a day without knowing it. “Machine learning Engineers” have become the most
-                in demand people in Silicon Valley, Quantitative Finance & Financial Technology, with firms like Waymo,
-                Goldman Sachs & Amazon paying top dollar for their expertise.
+                Machine learning & AI has given us self-driving cars, practical speech recognition, effective
+                web search, and a vastly improved understanding of the human genome. Machine learning is so
+                pervasive today that you probably use it dozens of times a day without knowing it. “Machine
+                learning Engineers” have become the most in demand people in Silicon Valley, Quantitative
+                Finance & Financial Technology, with firms like Waymo, Goldman Sachs & Amazon paying top
+                dollar for their expertise.
             </p>
             <p style="font-family: 'Ubuntu', cursive">
-                This course provides a broad introduction to machine learning, datamining, and statistical pattern recognition.
-                Topics include: (i) Supervised learning (parametric/non-parametric algorithms, support vector machines, kernels,
-                neural networks). (ii) Unsupervised learning (clustering, dimensionality reduction, recommender systems,
-                deep learning). (iii) Best practices in machine learning (bias/variance theory; innovation process in machine learning and AI).
+                This course provides a broad introduction to machine learning, data mining, and statistical
+                pattern recognition. Topics include: (i) Supervised learning (parametric/non-parametric
+                algorithms, support vector machines, kernels, neural networks). (ii) Unsupervised learning
+                (clustering, dimensionality reduction, recommender systems, deep learning). (iii) Best
+                practices in machine learning (bias/variance theory; innovation process in machine
+                learning and AI).
             </p>
           <a href="{% url 'shop:product_list' %}"><h5>Browse Events</h5></a>
       </div>
