add lse inv soc as partner

--- a/home/templates/home/partnerships.html
+++ b/home/templates/home/partnerships.html
@@ -23,6 +23,22 @@
       </div>
 </div>
 
+<div class="media" style="padding:50px">
+      <a class="media-left media-top" href="#">
+        <img class="pull-left" src="{% static 'img/Investment-Society-Logo-copy.png' %}" width="200" height="200">
+      </a>
+      <div class="media-body">
+        <a href="https://investmentsociety.co.uk/"><h2 class="media-heading">LSE Investment Society</h2></a>
+        <h3>About</h3>
+            <p>
+                The Investment Society was founded in 2003 to build the knowledge and skills of our members, enabling
+                them to realise their potential and career ambitions in the areas of investment and finance. Since its
+                founding, the Investment Society has grown to become one of the largest and most active societies at the
+                LSE and is incredibly proud of its legacy. We have been fortunate enough to be supported by a diverse
+                and growing sponsorship base, critical at driving our operations.
+            </p>
+      </div>
+</div>
 
 <div class="media" style="padding:50px">
       <a class="media-left media-top" href="#">
@@ -38,5 +54,7 @@
             </p>
       </div>
 </div>
+
+
 
 {% endblock %}
