--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -32,6 +32,7 @@
                     <li {% if request.resolver_match.url_name == 'about' %}class="active"{% endif %}><a href="{% url 'home:about' %}">About</a></li>
                     <li {% if request.resolver_match.url_name == 'post_list' %}class="active"{% endif %}><a href="{% url 'blog:post_list' %}">Blog</a></li>
                     <li {% if request.resolver_match.url_name == 'product_list' %}class="active"{% endif %}><a href="{% url 'shop:product_list' %}">Events</a></li>
+                    <li {% if request.resolver_match.url_name == 'course_list' %}class="active"{% endif %}><a href="{% url 'course_list' %}">Online Courses</a></li>
                     <li {% if request.resolver_match.url_name == 'partnerships' %}class="active"{% endif %}><a href="{% url 'home:partnerships' %}">Partnerships</a></li>
                     <li {% if request.resolver_match.url_name == 'investors' %}class="active"{% endif %}><a href="{% url 'home:investors' %}">Investors</a></li>
                 </ul>
@@ -54,6 +55,17 @@
 
     {% block content %}
     {% endblock %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            console.log('msg1');
+            {% block domready %}
+            {% endblock %}
+            console.log('msg3');
+        });
+    </script>
 
 </body>
 
