--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -1,5 +1,4 @@
-{% extends "shop/inline_base.html" %}
-{% load cache %}
+{% extends "shop/base.html" %}
 
 {% block title %}
     {{ object.title }}
@@ -14,7 +13,7 @@
         <ul id="modules">
         {% for m in object.modules.all %}
             <li data-id="{{ m.id }}" {% if m == module %}class="selected"{% endif %}>
-                <a href="{% url 'student_course_detail_module' object.id m.id %}">
+                <a href="{% url 'students:student_course_detail_module' object.id m.id %}">
                     <span>
                         Module <span class="order">{{ m.order|add:1 }}</span>
                     </span>
@@ -28,13 +27,11 @@
         </ul>
     </div>
     <div class="module">
-    {% cache 600 module_contents module %}
         {% for content in module.contents.all %}
             {% with item=content.item %}
                 <h2>{{ item.title }}</h2>
                 {{ item.render }}
             {% endwith %}
         {% endfor %}
-    {% endcache %}
     </div>
 {% endblock %}
