Added links to 'my courses' list view conditional on authentication

--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -3,8 +3,9 @@
 {% block title %}My courses{% endblock %}
 
 {% block content %}
-    <h1>My courses</h1>
-
+    <h1>
+        <span>My Courses</span>
+    </h1>
     <div class="module">
         {% for course in object_list %}
             <div class="course-info">
