--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -10,11 +10,13 @@
 
 {% block content %}
     <h1>
-        {% if subject %}
-            {{ subject.title }} courses
-        {% else %}
-            All courses
-        {% endif %}
+        <span>
+            {% if subject %}
+                {{ subject.title }} courses
+            {% else %}
+                All courses
+            {% endif %}
+        </span>
     </h1>
     <div class="contents">
         <h3>Subjects</h3>
@@ -31,6 +33,7 @@
                 </li>
             {% endfor %}
         </ul>
+        <h3><a href="{% url 'students:student_course_list' %}">My Courses</a></h3>
     </div>
     <div class="module">
         {% for course in courses %}
